# isr_school

./: .gitignore  LICENSE  README.md
v1/: restart
v1/devel/backend/: CHANGES  Makefile  README  setup.py
v1/devel/backend/server/: __init__.py  commands.py  dump_applications.sql  model.py  static
v1/devel/backend/server/routes/: auth.py.org
v1/devel/frontend/: .env  package.json
v1/devel/frontend/src/: index.css  routes.js  setupProxy.js
v1/devel/frontend/src/app/: app.js  footer.js  header.js
v1/devel/frontend/src/services/: api.service.js
v2/: README  deploy  restart
v2/devel/backend/: MANIFEST.in  Makefile  launcher  requirements.txt  setup.py
v2/devel/backend/server/: config.py  dump_app.sh  dump_applications.sql
v2/devel/backend/server/routes/: admin.py  api.py  approve.py  auth.py
v2/devel/frontend/: .env  package.json
v2/devel/frontend/src/: index.js
v2/devel/frontend/src/app/: app.css  header.js.org  navbar.js
v2/devel/frontend/src/services/: admin.service.js  api.service.js.org  auth.service.js
v2/devel/frontend/src/store/: store.js
v3/: sitecmd
v3/devel/backend/: CHANGES  Makefile  README  setup.cfg
v3/devel/backend/src/server/: __init__.py  commands.py  metadata.py
v3/devel/backend/src/server/migrations/versions/: 359a05d4df03_add_role_description.py  3e752b13b87d_remove_admin_field.py  4190669d83aa_add_back_housing_pref.py  5669fc6e53ad_make_role_single.py  75f011b27cc1_make_role_required.py  8f4e1d53b495_initial.py  ad3a2bc15388_remove_housing_prefs.py  ca2f254d0e53_add_trash_flag.py  dd9e7e7fc373_add_primary_keys_to_userroles.py  fe51a3d53c1e_add_roles.py
v3/devel/backend/src/server/routes/: admin.py  util.py
v3/devel/backend/src/server/routes/sql/: get_truth.sql.old
v3/devel/frontend/: .env  package.json
v3/devel/frontend/src/: index.js
v3/devel/frontend/src/app/: header.js
v4/devel/backend/: CHANGES  pyproject.toml
v4/devel/backend/src/server/: __init__.py  config.py  metadata.py
v4/devel/frontend/: .env  .eslintcache  package.json  rebuild
v4/devel/frontend/src/: index.css  index.js
v4/devel/frontend/src/app/: app.js  footer.js  header.js  layout.js
v4/devel/frontend/src/services/: api.service.js
v5/: profile  sitecmd
v5/devel/backend/: AUTHORS.rst  CHANGES  MANIFEST.in  Makefile  README  pyproject.toml  setup.cfg
v5/devel/backend/src/server/: metadata.py
v5/devel/frontend/: .env  .eslintrc  package-lock.json  package.json
v5/devel/frontend/src/: program.jsx  styles.js  theme.jsx
v5/devel/frontend/src/app/: db.sql  footer.module.css  header.jsx  layout.jsx
v5/devel/frontend/src/services/: api.service.js
v6/: profile
v6/devel/backend/: CHANGES  pyproject.toml  pyproject.toml.org
v6/devel/backend/src/server/: __init__.py  config.py  metadata.py
v6/devel/frontend/: .env  package-lock.json  package.json
v6/devel/frontend/src/: index.jsx
v6/devel/frontend/src/app/: footer.jsx  header.jsx  layout.module.css
v7/: profile  sitecmd
v7/devel/backend/: CHANGES  LICENSE  pyproject.toml
v7/devel/backend/src/server/: commands.py  metadata.py  model.py
v7/devel/backend/src/server/routes/: api.py
v7/devel/frontend/: .env  package-lock.json  package.json
v7/devel/frontend/src/: index.css  theme.jsx
(+113 files in other folders)
