[metadata]

name = isr_school 
version = attr: server.metadata.version
license = MIT

author='Todd Valentic'
author_email='todd.valentic@gmail.com'

description='ISR Summer School Website'
long_description = file: README

url = https://amisr.com/school
project_urls = 
    Source Code = https://github.com/valentic/isr_school
    Issue Tracker = https://github.com/valentic/isr_school/issues

classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
zip_safe = False

packages = find_namespace:

install_requires=
    pytz
    dateutils
    eventlet
    requests
    bcrypt
    flask
    psycopg2-binary
    sqlalchemy
    Flask-SQLAlchemy
    flask-compress
    flask-script
    flask-migrate
    flask-bcrypt
    flask-jwt-extended
    flask-socketio
    flask-restful
    flask-mail
    flask-flatpages
    coverage
    PyJWT
    cryptography
    itsdangerous
    docutils

[options.package_data]
server  = 
    migrations/*
    migrations/versions/*
    templates/*
    routes/templates/auth/*
    routes/templates/api/*
    static/js/*
    static/media/*
    static/css/*

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    server-cmd = server.commands:cli
    server-launch = server.commands:launch
